--- a/Gato.html
+++ b/Gato.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gato</title>
 </head>
+<div class="letra">
+    <h1>Tic Tac Toe</h1>
+</div>
 <body>
     <div class="tablero">
     <div class="cell" id="1"></div>
