hice una condicion de empate

--- a/Gato.html
+++ b/Gato.html
@@ -22,6 +22,6 @@
 </div>
     <script src="/Gato.js"></script>
     <link rel="stylesheet" href="/Gato.css">
-    
+    <button onclick="shutdown()">Reiniciar</button>
 </body>
 </html>
